--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "jquery": "3.1.1",
+    "json-server": "^0.16.1",
     "reflect-metadata": "0.1.9",
     "rxjs": "5.1.0",
     "ts-helpers": "1.1.2",
@@ -46,8 +47,8 @@
     "karma-remap-istanbul": "0.2.2",
     "protractor": "5.1.0",
     "ts-node": "2.1.0",
-    "tslint": "4.5.0",
-    "typescript": "2.2.0",
+    "tslint": "^4.5.0",
+    "typescript": "^2.2.0",
     "webdriver-manager": "10.2.5"
   }
 }
