--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "4.0.0",
     "@angular/compiler": "4.0.0",
     "@angular/core": "4.0.0",
@@ -27,9 +28,11 @@
     "intl": "1.2.5",
     "jquery": "3.1.1",
     "json-server": "^0.16.1",
+    "polyfills": "^2.1.1",
     "reflect-metadata": "0.1.9",
     "rxjs": "5.1.0",
     "ts-helpers": "1.1.2",
+    "web-animations-js": "^2.2.5",
     "zone.js": "0.8.4"
   },
   "devDependencies": {
