--- a/angular.json
+++ b/angular.json
@@ -21,17 +21,17 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/admin-lte/bootstrap/css/bootstrap.min.css",
-              "node_modules/admin-lte/dist/css/AdminLTE.min.css",
-              "node_modules/admin-lte/dist/css/skins/skin-red.min.css",
-              "node_modules/admin-lte/plugins/iCheck/flat/red.css",
-              "src/styles.css"
+              {"input":"node_modules/font-awesome/css/font-awesome.min.css"},
+              {"input":"node_modules/admin-lte/bootstrap/css/bootstrap.min.css"},
+              {"input":"node_modules/admin-lte/dist/css/AdminLTE.min.css"},
+              {"input":"node_modules/admin-lte/dist/css/skins/skin-red.min.css"},
+              {"input":"node_modules/admin-lte/plugins/iCheck/flat/red.css"},
+              {"input":"src/styles.css"}
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/admin-lte/bootstrap/js/bootstrap.min.js",
-              "node_modules/admin-lte/dist/js/app.min.js"
+              {"input": "node_modules/jquery/dist/jquery.min.js"},
+              {"input": "node_modules/admin-lte/bootstrap/js/bootstrap.min.js"},
+              {"input": "node_modules/admin-lte/dist/js/app.min.js"}
             ]
           },
           "configurations": {
